test/corpus/object_like_values.txt
====================
object like - values
====================

cmd abc[
  _=,
  _=_,
  _=*,
  _=123,
  _=-123,
  _=+123,
  _=12.3,
  _=-12.3,
  _=+12.3,
  _=true,
  _=false,
  _="abc 123 £¢€¥",
  _=1..,
  _=..1,
  _=1..3,
  _=-3..-6,
  _=1.2..,
  _=..4.5,
  _=2.7..4.8,
  _=-6.7..-2.3,
  _=~123,
  _=~-123,
  _=~12.3,
  _=~-12.3,
  _=~,
  _=^123,
  _=^-123,
  _=^12.3,
  _=^-12.3,
  _=^,
  _=abc,
  _=abc123,
  _=abc123abc,
  _=@abc,
  _=#abc,
  _=abc.abc123abc.abc,
  _=1223e1a7-292c-443d-a040-f65e0fa8f40e,
  _=8346d143-c23c-4136-a695-ca8ecca0b9cf,
  _=affa309a-ff53-4799-b542-97cd02096560,
  _=abc/abc123.abc/abc-abc123/abc.abc123.abc,
  _=abc.abc123abc:abc123.abc,
  _=abc.abc12_3abc:#abc123.abc,
  _=abc:abc
]

---

(root
  (command
    (command_name)
    (identifier_composite
      (identifier)
      (object_like
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (integer)
        (identifier)
        (integer)
        (identifier)
        (integer)
        (identifier)
        (float)
        (identifier)
        (float)
        (identifier)
        (float)
        (identifier)
        (boolean)
        (identifier)
        (boolean)
        (identifier)
        (string)
        (identifier)
        (range
          (integer))
        (identifier)
        (range
          (integer))
        (identifier)
        (range
          (integer)
          (integer))
        (identifier)
        (range
          (integer)
          (integer))
        (identifier)
        (range
          (float))
        (identifier)
        (range
          (float))
        (identifier)
        (range
          (float)
          (float))
        (identifier)
        (range
          (float)
          (float))
        (identifier)
        (axis
          (integer))
        (identifier)
        (axis
          (integer))
        (identifier)
        (axis
          (float))
        (identifier)
        (axis
          (float))
        (identifier)
        (axis)
        (identifier)
        (axis
          (integer))
        (identifier)
        (axis
          (integer))
        (identifier)
        (axis
          (float))
        (identifier)
        (axis
          (float))
        (identifier)
        (axis)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier
          (identifier))
        (identifier)
        (identifier
          (identifier))
        (identifier)
        (identifier
          (identifier))))))
